--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -99,7 +99,7 @@
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    padding: $spacing-unit 0 0 0;
 }
 
 .footer-heading {
@@ -122,7 +122,7 @@
 
 .footer-col {
     float: left;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: 0; //$spacing-unit / 2;
     padding-left: $spacing-unit / 2;
 }
 
