--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,14 +1,25 @@
----
-layout: default
----
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-  </header>
+  {% include head.html %}
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+  <body>
 
-</article>
+    {% include header.html %}
+
+    <br />
+    <br />
+    <header class="post-header" style="text-align:center;">
+      <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+      <h3>{{ page.description }}</h3>
+    </header>
+
+    <div class="page-content">
+        {{ content }}
+    </div>
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
