--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -338,3 +338,11 @@ text-align: center;
 vertical-align: middle;
 font-size: $caption_font_size;
 }
+
+.hideflex {
+  @include media-query($on-palm) {
+  display: none;
+}
+padding-left: 40px;
+flex-grow: 1;
+}
