Make shields.io icons local, fix mobile linking

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,7 @@
       <div class="footer-col footer-col-3"  >
 
         <br/>
-
-        {% include donate-button.html %}
-
+        {% include donate-currencies-green.svg %}
 
       </div>
     </div>
