Update with google scholar proflie info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li> {{ site.description }} </li>
+          <li><a href="https://scholar.google.com/citations?user=xROn8y4AAAAJ">my google scholar profile</a></li>
         </ul>
 
 
