Add google analytics

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -20,6 +20,10 @@
 
     {% include footer.html %}
 
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+
   </body>
 
 </html>
