--- a/_layouts/widecontent.html
+++ b/_layouts/widecontent.html
@@ -13,6 +13,11 @@
 
     {% include footer.html %}
 
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+
+
   </body>
 
 </html>
