Add RSS icon to blog page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -233,6 +233,16 @@ pre {
     }
 }
 
+.icon--rss {
+
+    > svg {
+
+        path {
+            fill: #FFFFFF;
+        }
+    }
+}
+
 /**
  * Wrapper
  */
