Fix CSS to work with README.md gists

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -296,9 +296,9 @@ pre {
   max-height:350px;
 }
 
-.gist .blob-wrapper {
+.gist .file {
   max-height:400px;
-  overflow: auto !important;
+  overflow:auto !important;
 }
 
 .gist .type-csv {
