Move RSS subscribe link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,8 @@
 
       <div class="footer-col footer-col-3"  >
 
-        <br/>
+        {% include subscribe-rss-orange.svg %}
         {% include donate-currencies-green.svg %}
-
       </div>
     </div>
 
