--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <li>{{ site.title }} (hehimhis)</li>
           <li> {{ site.description }} </li>
           <li><a href="https://scholar.google.com/citations?user=xROn8y4AAAAJ">my google scholar profile</a></li>
         </ul>
