Add accessibility section

--- a/_includes/neogeocities-clock.html
+++ b/_includes/neogeocities-clock.html
@@ -63,7 +63,7 @@ function show3(){
 }
 
 window.onload = function(){
-  window.setInterval(show3, 1000);
+  window.disableID = window.setInterval(show3, 1000);
 };
 </script>
 
