--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -329,3 +329,99 @@ pre {
    display: none;
    overflow: hidden;
  }
+
+/* efflux page */
+
+button.efflux {
+  flex-grow:1;
+  flex-basis:0;
+  cursor:pointer;
+  margin:0 10px 0 10px;
+  padding:5px 5px 5px 5px;
+  border:1px solid black;
+  background-color: transparent;
+  border-radius:8px;
+}
+button.efflux:hover {
+  background-color: #E8E8E8;
+  /* border:2px solid black; */
+  /* background-color: black;
+  color: white; */
+}
+
+details.lollipop > summary {
+  list-style-type: "";
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: margin 150ms ease-out;
+  padding-bottom: 0px;
+  margin-left: 0.625em;
+  border-left: 2px solid transparent;
+}
+
+details.lollipop > summary:hover {
+  text-decoration: underline;
+}
+
+
+details.lollipop summary > * {
+  display: inline;
+}
+
+details.lollipop > summary:before {
+  content: url("data:image/svg+xml; utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' height='2em' width='1.25em' %3E%3Ctext x='50%25' y='50%25' font-size='1.9em' dominant-baseline='middle' text-anchor='middle'%3E⎉%3C/text%3E%3C/svg%3E");
+  margin-right: 5px;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-left: -0.625em;
+}
+
+details[open].lollipop > summary:before {
+  content: url("data:image/svg+xml; utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' height='2em' width='1.25em' %3E%3Ctext x='50%25' y='50%25' font-weight='bold' font-size='x-large' dominant-baseline='middle' text-anchor='middle'%3E◉%3C/text%3E%3C/svg%3E");
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: -0.625em;
+}
+
+summary.lollipop::-webkit-details-marker {
+  list-style-type: "";
+}
+
+details.lollipop[open] > summary {
+  list-style-type: "";
+  transition: padding 150ms ease-out;
+  padding-bottom: 10px;
+  margin-left: 0.625em;
+  border-left: 2px solid;
+  border-image: linear-gradient(to top, black 0 50%, transparent 50% 100%) 1 100%;
+}
+
+.lollipop-detail {
+  margin-left: 0.625em;
+  border-left: solid 2px;
+  padding-left: 10px;
+}
+
+@keyframes details-show {
+  from {
+    opacity: 0;
+  }
+}
+
+details[open].lollipop > *:not(summary) {
+  animation: details-show 150ms ease-in-out;
+}
+
+.exit-cursor {
+  cursor: url('data:image/svg+xml;utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="font-size: 25px; font-weight: bold; paint-order: stroke; stroke: %23ffffff; stroke-width: 5px; stroke-linecap: butt; stroke-linejoin: miter; font-weight: 800;"%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle"%3E🗙%3C/text%3E%3C/svg%3E'), auto;
+}
+
+.escape-cursor {
+  cursor: url('data:image/svg+xml;utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="font-size: 25px; font-weight: bold; paint-order: stroke; stroke: %23ffffff; stroke-width: 5px; stroke-linecap: butt; stroke-linejoin: miter; font-weight: 800;"%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle"%3E⎋%3C/text%3E%3C/svg%3E'), auto;
+}
