--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -332,7 +332,7 @@ pre {
 
 /* efflux page */
 
-button.efflux {
+a.button.efflux {
   flex-grow:1;
   flex-basis:0;
   cursor:pointer;
@@ -341,8 +341,9 @@ button.efflux {
   border:1px solid black;
   background-color: transparent;
   border-radius:8px;
+  text-align: center;
 }
-button.efflux:hover {
+a.button.efflux:hover {
   background-color: #E8E8E8;
   /* border:2px solid black; */
   /* background-color: black;
@@ -426,4 +427,13 @@ details[open].lollipop > *:not(summary) {
 
 .escape-cursor {
   cursor: url('data:image/svg+xml;utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="font-size: 25px; font-weight: bold; paint-order: stroke; stroke: %23ffffff; stroke-width: 5px; stroke-linecap: butt; stroke-linejoin: miter; font-weight: 800;"%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle"%3E⎋%3C/text%3E%3C/svg%3E'), auto;
+}
+
+a.button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+
+  text-decoration: none;
+  color: initial;
 }
