Change short abstracts to descriptions

--- a/_includes/efflux_content.html
+++ b/_includes/efflux_content.html
@@ -86,6 +86,10 @@ __Venue__
 
 </table>
 
+{% if page.description %}
+{{ page.description | markdownify }}
+{% endif %}
+
 {% if page.abstract %}
 <details class="lollipop" markdown="1">
 <summary class="lollipop">Abstract</summary>
