--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,29 +1,14 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  {% include head.html %}
+  <header class="post-header">
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+  </header>
 
-  <body>
+  <div class="post-content" itemprop="articleBody">
+    {% include anchor_headings.html html=content anchorBody="🔗" anchorClass="toc-anchor" beforeHeading=true%}
+  </div>
 
-    {% include header.html %}
-
-    <br />
-    <br />
-    <header class="post-header" style="text-align:center;">
-      <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-      <h3>{{ page.description }}</h3>
-    </header>
-
-    <div class="page-content">
-        {{ content }}
-    </div>
-
-    {% include footer.html %}
-
-    {% if jekyll.environment == 'production' %}
-    {% include analytics.html %}
-    {% endif %}
-
-  </body>
-
-</html>
+</article>
