Fixup standalone effluvia pages

--- a/_includes/efflux_content.html
+++ b/_includes/efflux_content.html
@@ -23,9 +23,7 @@ Download
 {% if page.authors %}
 <tr>
 <td>
-<span markdown="1">
-__Authors__
-</span>
+<b>Authors</b>
 </td>
 <td>
 <span>
@@ -43,7 +41,7 @@ __Authors__
 <tr>
 <td>
 <span markdown="1">
-__Date__
+<b>Date</b>
 </span>
 </td>
 <td>
@@ -58,7 +56,7 @@ __Date__
 <tr>
 <td>
 <span markdown="1">
-__DOI__
+<b>DOI</b>
 </span>
 </td>
 <td>
@@ -73,7 +71,7 @@ __DOI__
 <tr>
 <td>
 <span markdown="1">
-__Venue__
+<b>Venue</b>
 </span>
 </td>
 <td>
