--- a/_layouts/efflux.html
+++ b/_layouts/efflux.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 ---
 <article class="post" itemscope itemtype="https://schema.org/ItemPage">
 
@@ -8,6 +8,6 @@ layout: post
     <span class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished"></time></span>
   </header>
 
-  {% include efflux_content.html page=post %}
+  {% include efflux_content.html page=page %}
 
 </article>
