--- a/_includes/efflux_content.html
+++ b/_includes/efflux_content.html
@@ -1,17 +1,15 @@
-{% assign page = include.page %}
-
 <span style="display:inline-flex;width:100%;">
-{% if page.view_github %}<a href="{{ page.view_github }}" class="button efflux">
+{% if include.page.view_github %}<a href="{{ include.page.view_github }}" class="button efflux">
 View on GitHub
 <br/>
 <i class="icon-github-1"></i>
 </a>{% endif %}
-{% if page.download %}<a href="{{ page.download }}" class="button efflux">
+{% if include.page.download %}<a href="{{ include.page.download }}" class="button efflux">
 Download
 <br/>
 <i class="icon-download"></i>
 </a>{% endif %}
-{% if page.view_publisher %}<a href="{{ page.view_publisher }}" class="button efflux">
+{% if include.page.view_publisher %}<a href="{{ include.page.view_publisher }}" class="button efflux">
 <span sytle="font-weight:450;">View at Publisher</span>
 <br/>
 <i style="font-weight:800" class="icon-link-ext"></i>
@@ -20,14 +18,14 @@ Download
 
 <table>
 
-{% if page.authors %}
+{% if include.page.authors %}
 <tr>
 <td>
 <b>Authors</b>
 </td>
 <td>
 <span>
-{% for author in page.authors %}
+{% for author in include.page.authors %}
 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
   {% if author == "Matthew Andres Moreno" %}<i>{% endif %}<span itemprop="name">{{ author }}</span>{% if author == "Matthew Andres Moreno" %}</i>{% endif %}{% if forloop.last != true %},{% endif %}
 </span>
@@ -37,7 +35,7 @@ Download
 </tr>
 {% endif %}
 
-{% if page.date %}
+{% if include.page.date %}
 <tr>
 <td>
 <span markdown="1">
@@ -46,13 +44,13 @@ Download
 </td>
 <td>
 <span markdown="1">
-{{ page.date | date_to_long_string: "ordinal", "US" }}
+{{ include.page.date | date_to_long_string: "ordinal", "US" }}
 </span>
 </td>
 </tr>
 {% endif %}
 
-{% if page.doi %}
+{% if include.page.doi %}
 <tr>
 <td>
 <span markdown="1">
@@ -61,13 +59,13 @@ Download
 </td>
 <td>
 <span markdown="1">
-<a href="https://doi.org/{{ page.doi }}">{{ page.doi }}</a>
+<a href="https://doi.org/{{ include.page.doi }}">{{ include.page.doi }}</a>
 </span>
 </td>
 </tr>
 {% endif %}
 
-{% if page.venue %}
+{% if include.page.venue %}
 <tr>
 <td>
 <span markdown="1">
@@ -76,7 +74,7 @@ Download
 </td>
 <td>
 <span markdown="1">
-{{ page.venue }}
+{{ include.page.venue }}
 </span>
 </td>
 </tr>
@@ -84,29 +82,29 @@ Download
 
 </table>
 
-{% if page.description %}
-{{ page.description | markdownify }}
+{% if include.page.description %}
+{{ include.page.description | markdownify }}
 {% endif %}
 
-{% if page.abstract %}
+{% if include.page.abstract %}
 <details class="lollipop" markdown="1">
 <summary class="lollipop">Abstract</summary>
 
 <div class="lollipop-detail" markdown="1">
-{{ page.abstract | markdownify }}
+{{ include.page.abstract | markdownify }}
 </div>
 
 </details>
 {% endif %}
 
-{% if page.bibtex %}
+{% if include.page.bibtex %}
 <details class="lollipop" markdown="1">
 <summary class="lollipop">BibTeX</summary>
 
 <div class="lollipop-detail" markdown="1">
 {% capture bibtex_include %}
 ```bibtex
-{{ page.bibtex }}
+{{ include.page.bibtex }}
 ```
 {% endcapture %}
 {{ bibtex_include | markdownify }}
@@ -114,24 +112,24 @@ Download
 </details>
 {% endif %}
 
-{% if page.citation %}
+{% if include.page.citation %}
 <details class="lollipop" markdown="1">
 <summary class="lollipop">Citation</summary>
 
 <div class="lollipop-detail" markdown="1">
 {% capture citation_include %}
-> {{ page.citation }}
+> {{ include.page.citation }}
 {% endcapture %}
 {{ citation_include | markdownify }}
 </div>
 </details>
 {% endif %}
 
-{% if page.supporting_materials %}
+{% if include.page.supporting_materials %}
 <details class="lollipop" markdown="1">
 <summary class="lollipop">Supporting Materials</summary>
 <div class="lollipop-detail" markdown="1">
-{{ page.supporting_materials | markdownify }}
+{{ include.page.supporting_materials | markdownify }}
 </div>
 </details>
 {% endif %}
