--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post" itemscope itemtype="https://schema.org/ItemPage">
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <span class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished"></time></span>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
-    {% include anchor_headings.html html=content anchorBody="🔗" anchorClass="toc-anchor" beforeHeading=true%}
-  </div>
+  {% include project_content.html page=page %}
 
 </article>
